[gd_scene load_steps=7 format=3 uid="uid://dk31yiflq813g"]

[ext_resource type="Script" uid="uid://novq8jodqgp7" path="res://ProgrammingGameAIByExample/Raven/raven_main_scene.gd" id="1_c0dl3"]
[ext_resource type="PackedScene" uid="uid://c5uea86dlcivm" path="res://ProgrammingGameAIByExample/Raven/map_ui_editor.tscn" id="1_pnaga"]
[ext_resource type="Script" uid="uid://p8yqjw3k0s8h" path="res://ProgrammingGameAIByExample/Raven/agent_container.gd" id="2_qcd6h"]
[ext_resource type="Script" uid="uid://dwwxhp0al65y5" path="res://ProgrammingGameAIByExample/Raven/Items/triggers_container.gd" id="3_bmaej"]
[ext_resource type="PackedScene" uid="uid://blaxjkyc3u28c" path="res://ProgrammingGameAIByExample/Raven/Scenes/UI/map_drawing_input.tscn" id="4_f5ucg"]

[sub_resource type="ViewportTexture" id="ViewportTexture_f5ucg"]
viewport_path = NodePath("SubViewport")

[node name="RavenMainScene" type="Node2D"]
script = ExtResource("1_c0dl3")

[node name="AgentContainer" type="Node2D" parent="."]
z_index = 70
script = ExtResource("2_qcd6h")

[node name="TriggersContainer" type="Node2D" parent="."]
z_index = 99
script = ExtResource("3_bmaej")

[node name="MapDrawingInput" parent="." instance=ExtResource("4_f5ucg")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 26

[node name="UI" parent="CanvasLayer" instance=ExtResource("1_pnaga")]
mouse_force_pass_scroll_events = false

[node name="ProjectileContainer" type="Node2D" parent="."]
z_index = 4096

[node name="World" type="Sprite2D" parent="."]
texture = SubResource("ViewportTexture_f5ucg")
centered = false

[connection signal="map_load_request" from="CanvasLayer/UI" to="." method="_on_ui_map_load_request"]
[connection signal="map_save_request" from="CanvasLayer/UI" to="." method="_on_ui_map_save_request"]
[connection signal="start_map_request" from="CanvasLayer/UI" to="." method="_on_ui_start_map_request"]

[editable path="MapDrawingInput"]
